cabal-version:         2.4

name:                  adventofcode2020
version:               0.1.0.0
license-file:          LICENSE
author:                Aleksei Pirogov
maintainer:            astynax@users.noreply.github.com
build-type:            Simple

common exe
  build-depends:       base >=4.13 && <4.14
                     , megaparsec ^>= 9.0.0
                     , containers
  default-language:    Haskell2010

executable day01
  import:              exe
  main-is:             Day01.hs

executable day02
  import:              exe
  main-is:             Day02.hs

executable day03
  import:              exe
  main-is:             Day03.hs

executable day04
  import:              exe
  main-is:             Day04.hs

executable day05
  import:              exe
  main-is:             Day05.hs

executable day06
  import:              exe
  main-is:             Day06.hs

executable day07
  import:              exe
  main-is:             Day07.hs

executable day08
  import:              exe
  main-is:             Day08.hs

executable day09
  import:              exe
  main-is:             Day09.hs
