cabal-version:         2.4

name:                  adventofcode2020
version:               0.1.0.0
license-file:          LICENSE
author:                Aleksei Pirogov
maintainer:            astynax@users.noreply.github.com
build-type:            Simple

common exe
  build-depends:       base >=4.13 && <4.14
                     , megaparsec ^>= 9.0.0
                     , containers
                     , mtl
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
                     , TupleSections
                     , TypeApplications
                     , BangPatterns
                     , LambdaCase
                     , NegativeLiterals
                     , FlexibleContexts
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wmissing-exported-signatures

executable day01
  import:              exe
  main-is:             Day01.hs

executable day02
  import:              exe
  main-is:             Day02.hs

executable day03
  import:              exe
  main-is:             Day03.hs

executable day04
  import:              exe
  main-is:             Day04.hs

executable day05
  import:              exe
  main-is:             Day05.hs

executable day06
  import:              exe
  main-is:             Day06.hs

executable day07
  import:              exe
  main-is:             Day07.hs

executable day08
  import:              exe
  main-is:             Day08.hs

executable day09
  import:              exe
  main-is:             Day09.hs

executable day10
  import:              exe
  main-is:             Day10.hs

executable day11
  import:              exe
  main-is:             Day11.hs

executable day12
  import:              exe
  main-is:             Day12.hs

executable day13
  import:              exe
  main-is:             Day13.hs

executable day14
  import:              exe
  main-is:             Day14.hs

executable day15
  import:              exe
  main-is:             Day15.hs

executable day16
  import:              exe
  main-is:             Day16.hs

executable day17
  import:              exe
  main-is:             Day17.hs

executable day18
  import:              exe
  main-is:             Day18.hs

executable day19
  import:              exe
  main-is:             Day19.hs

executable day20
  import:              exe
  main-is:             Day20.hs

executable day21
  import:              exe
  main-is:             Day21.hs

executable day22
  import:              exe
  main-is:             Day22.hs
  build-depends:       unordered-containers

executable day23
  import:              exe
  main-is:             Day23.hs
  build-depends:       unordered-containers
